# picodiff

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
.github/workflows/scripts/: make-release-asset.sh
src/: main.rs  models.rs
