[package]
name = "picodiff"
version = "0.9.5"
edition = "2021"
authors = ["nabbisen"]
license = "Apache-2.0"
description = "Tiny GUI app to compare text easily"
repository = "https://github.com/nabbisen/picodiff"
readme = "README.md"
categories = ["text-processing", "gui", "value-formatting", "visualization"]
keywords = ["text", "compare", "diff", "productivity"]
rust-version = "1.74.0"

[dependencies]
fltk = { version = "^1.5", features = ["fltk-bundled", "use-wayland"] }
similar = "^2.5"
